<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:background="@drawable/card_border"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/img_leaderboard_cover"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:background="@color/retro_card" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/txt_leaderboard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pressstart2p"
            android:text="@string/game_title_placeholder"
            android:textColor="@color/retro_blue"
            android:textSize="8sp"
            android:maxLines="2"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/txt_leaderboard_wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pressstart2p"
            android:text="@string/wins_zero"
            android:textColor="@color/retro_text_secondary"
            android:textSize="7sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pressstart2p"
        android:text="@string/first_place_short"
        android:textColor="@color/retro_yellow"
        android:textSize="9sp" />

</LinearLayout>